--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -848,17 +848,6 @@ pre {
     font-size: $font_monospace_size;
 }
 
-.gambiarraTemporaria {
-    display: block;
-    margin-top: -39px;
-    margin-bottom: -59px;
-    white-space: break-spaces;
-
-    // white-space: pre-wrap;
-    // word-break: break-world;
-    // overflow-x: auto;
-}
-
 /* 
 details {
     border: 1px solid hsl(0, 0%, 67%);
@@ -932,10 +921,10 @@ details {
     // padding: 5rem 12rem 5rem 16rem;
     @extend %margins;
 
-    > summary {
+    > summary:nth-of-type(1) {
         // min-height: 40px;
         //padding: 9rem 12rem 9rem 16rem;
-            line-height: 40px !important;
+            line-height: 40px;
             padding-left: 16px;
             padding-right: 12px;
 
@@ -1444,6 +1433,17 @@ dl.noListStyle {
     margin-right: auto !important;
 }
 
+.gambiarraTemporaria {
+    display: block;
+    margin-top: -39px;
+    margin-bottom: -59px;
+    white-space: break-spaces;
+
+    // white-space: pre-wrap;
+    // word-break: break-world;
+    // overflow-x: auto;
+}
+
 
 /*  TODO:    1 ▶ Text Icons
 ◈──────────────────────────────────────────────────────◈ */
@@ -1732,13 +1732,16 @@ TODO: Layout Sections
         }
 
         a {
-            height: $button_height;
-            color: inherit;
-            text-decoration: none;
-            text-shadow: 1px 1px 1px $color_shadow_text;
             display: flex; 
             justify-content: center;
             align-items: center;
+            height: $button_height;
+            color: inherit;
+            text-decoration: none;
+
+            // text-shadow: 1px 1px 1px $color_shadow_text; // Substitui essa sombra pelo 'filter: drop-shadow()' abaixo
+            text-shadow: 0px 0px 1px hsla(195, 100%, 22%, 1); // Contorno nos textos
+            filter: drop-shadow(3px 3px 1px hsla(0, 0%, 0%, 0.15)); // Sombra
         }
 
         .logo {
@@ -1755,9 +1758,11 @@ TODO: Layout Sections
             margin-top: 0;
         }
 
+        /* 
         .text_img, .text_img_size {
             filter: drop-shadow(1px 1px 1px $color_shadow_text); 
         }
+        */
     }
 
     .button-left {
@@ -1777,9 +1782,11 @@ TODO: Layout Sections
             color: $color_text_menu;
         }
 
+        /* 
         img {
             filter: drop-shadow(1px 1px 1px $color_shadow_text); 
         }
+         */
     }
 
 
@@ -1811,7 +1818,7 @@ TODO: Layout Sections
 
                         span { 
 
-                            filter: drop-shadow(0px 0px 2px hsl(195, 100%, 44%));  
+                            // filter: drop-shadow(0px 0px 2px hsl(195, 100%, 44%));  
                         }
 
                 div { // <- Sub opções
@@ -1972,7 +1979,7 @@ TODO: Layout Sections
                 img {
                     width: $button_height;
                     margin-right: 2px;
-                    filter: drop-shadow(1px 1px 1px $color_shadow_text); 
+                    // filter: drop-shadow(1px 1px 1px $color_shadow_text); 
                 }
             }
         }
@@ -2086,7 +2093,7 @@ TODO: Layout Sections
     img {
         width: inherit;
         height: inherit;
-        filter: drop-shadow(1px 1px 1px $color_shadow_text); 
+        // filter: drop-shadow(1px 1px 1px $color_shadow_text); 
     }
 
     /*
@@ -2097,6 +2104,15 @@ TODO: Layout Sections
     */
 }
 
+
+
+
+
+
+
+
+.header-nav a { 
+} 
 
 /*  TODO:    1 ▶ Footer
 ◈──────────────────────────────────────────────────────◈ */
@@ -6189,8 +6205,6 @@ TODO: Classes JS
     
     overflow: hidden;
 }
-
-
 
 
 
