--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -1818,7 +1818,7 @@ TODO: Layout Sections
 
                         span { 
 
-                            // filter: drop-shadow(0px 0px 2px hsl(195, 100%, 44%));  
+                            filter: drop-shadow(0px 0px 2px hsl(195, 100%, 44%));  
                         }
 
                 div { // <- Sub opções
