--- a/hi-techCore/styles/css/downloadFonts.css
+++ b/hi-techCore/styles/css/downloadFonts.css
@@ -9,6 +9,11 @@ pois as fontes precisam ser importadas antes de serem usadas no site.
 */
 
 @font-face {
+    font-family: "Digital_Disk";
+    src: url("../../fonts/Digital_Disk_Regular.otf");
+} 
+
+@font-face {
     font-family: "Cyber-BoldBook";
     src: url("../../fonts/Cyber_BoldBook.ttf");
 } 
